--- a/style.css
+++ b/style.css
@@ -1,11 +1,78 @@
-body{
-    background-color: yellow;
-    color: red;
-    text-align: center;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.game-button{
-    height: 60px;
-    width: 60px;
-    display: flexbox;
+body{
+    height: 100vh;
+    background-color: hsl(60, 88%, 63%);
+    color: hsl(0, 90%, 46%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
 }
+
+img {
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    /* margin-bottom: 100px; */
+}
+
+.board {
+    height: 600px;
+    width: 600px;
+    display: grid;
+    grid-template-columns: repeat(5, 100px);
+    /* display: flex; */
+    /* flex-wrap: wrap; */
+    /* margin: auto; */
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+    gap: 10px;
+    padding: 20px;
+}
+
+.card {
+    height: 100%;
+    width: 100%;
+    border: 5px solid grey;
+    border-radius: 10px;
+    cursor: pointer;
+    position: relative;
+}
+
+.back,.front {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    padding 10px;
+    /* background-color: hsl(0, 3%, 6%); */
+}
+
+.back:hover{
+    background-color: hsl(0, 4%, 26%);
+}
+
+#play-again { 
+    background-color: hsl(0, 90%, 46%);
+    color: white;
+    font-size: 20px;
+    height: 60px;
+    width: 150px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    /* align-items: baseline; */
+}
+
+#play-again:hover{
+    background-color: hsl(0, 75%, 57%);
+}
+/* 
+.hidden {
+    visibility: hidden;
+} */
