--- a/style.css
+++ b/style.css
@@ -21,6 +21,22 @@ img {
     /* margin-bottom: 100px; */
 }
 
+#nav {
+    padding: 20px;
+    font-size: 20px;
+    display: flex;
+    justify-content: space-evenly;
+    align-content: center;
+    gap: 90px
+  }
+
+#timer {
+    /* margin-right: 0 50px 0 0; */
+}
+
+#wrong-guess{
+    /* margin-left: 0 30px 0 0; */
+}
 .board {
     height: 600px;
     width: 600px;
@@ -34,6 +50,7 @@ img {
     margin: 10px;
     gap: 10px;
     padding: 20px;
+    perspective: 1000px;
 }
 
 .card {
@@ -43,14 +60,28 @@ img {
     border-radius: 10px;
     cursor: pointer;
     position: relative;
+    transform-style: preserve-3d;
+    transition: transform .5s;
+    /* background-color: blue; */
+}
+
+.card.flip {
+    transform: rotateY(180deg);
 }
 
 .back,.front {
     position: absolute;
     width: 100%;
     height: 100%;
-    padding 10px;
+    padding: 10px;
     /* background-color: hsl(0, 3%, 6%); */
+    backface-visibility: hidden;
+    background-color: hsl(0, 69%, 55%);
+    display: inline-block;
+}
+
+.front{
+    transform: rotateY(180deg);
 }
 
 .back:hover{
