--- a/style.css
+++ b/style.css
@@ -4,19 +4,26 @@
     box-sizing: border-box;
 }
 
+@font-face {
+    font-family: "curious-george";
+    src: url(curious-george.ttf);
+}
+
 body{
     height: 100vh;
     background-color: hsl(60, 88%, 63%);
     color: hsl(0, 90%, 46%);
+    /* color: white; */
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 20px;
+    
 }
 
 ul {
     list-style-type: circle;
-    font-size: 20px;
+    font-size: 30px;
 }
 
 img {
@@ -25,14 +32,20 @@ img {
     background-color: white;
     /* margin-bottom: 100px; */
 }
-
+#main-title{
+    font-family: curious-george, sans-serif;
+    text-shadow: 2px 2px white;
+    font-size: 70px;
+}
 #nav {
     padding: 20px;
     font-size: 20px;
     display: flex;
-    justify-content: space-evenly;
-    align-content: center;
-    gap: 90px
+    flex-direction: row;
+    justify-content: center;
+    align-content: space-between;
+    gap: 90px;
+    font-size: 28px;
   }
 
 .board {
